2003-04-08  Kevin Vandersloot <kfv101@psu.edu>

	* linux-proc.c, properties.c, memload.c: Add seperate entry for cached memory. 
	Fixes bug #91971

2003-04-08  Kevin Vandersloot <kfv101@psu.edu>

	* loadavg.c, properties.c, main.c: get load average graph working. From Patch by
	rwahl at gmx de. Fixes bug #107935
	
	* load-graph.c: fix small sizing issue. Again from rwahl at gmx de.

2003-04-07  Kevin Vandersloot <kfv101@psu.edu>

	* main.c: Extensibility of nmber of graphs. Patch by James Strandboge. Fixes 
	bug #90964

2003-03-14  Kevin Vandersloot <kfv101@psu.edu>

	* linux-proc.c: Get other network showing correctly. Fixes bug #91730.
	Patch by jlaska@us.ibm.com.

2003-03-12  Dennis Smit  <synap@area101.penguin.nl>

	* main.c, properties.c: Changed "Swap File" into "Swap Space"
	as a fix for bug #87934

2003-03-12  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: fix small sizing issues. Patch from <berberic@fmi.uni-passau.de>.
	Fixes bug #94745

2002-12-16  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: don't dist the .server.in file since
	it harcodes paths

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_MultiLoadApplet_Factory.server.in.in: added bugzilla
	attributtes

2002-12-02  Christian Neumair  <chris@gnome-de.org>

	* properties.c: Made tabs HIG compliant (removed mnemonics).

2002-09-15  Juan Salaverria <rael@vectorstar.net>

	* GNOME_MultiloadApplet.xml: Added a separator in the
	menu. May fix bug #89864

2002-09-19  Mark McLoughlin  <mark@skynet.ie>

	* main.c: (about_cb), (start_procman_cb):
	* properties.c: (multiload_properties_cb):
	kill the HAVE_GTK_MULTIHEAD conditionals. We
	require gtk+ HEAD now.

2002-08-14  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: link against libscreen-exec.la.

	* main.c: upd.

2002-07-24 John Fleck <jfleck@inkstain.net>

	removing extraneous OMF file:
	* multiload/docs/es/cpuload/cpuload_applet-C.omf
	Fixes http://bugzilla.gnome.org/show_bug.cgi?id=88992
