@@ -199,10 +199,20 @@
 	<key>/schemas/apps/multiload/prefs/netload_color3</key>
 	<owner>multiload-applet-2</owner>
 	<type>string</type>
+	<default>#B7FEFF</default>
+	<locale name="C">
+		<short>Network other usage</short>
+		<long>Network other usage</long>
+	</locale>
+</schema>
+<schema>
+	<key>/schemas/apps/multiload/prefs/netload_color4</key>
+	<owner>multiload-applet-2</owner>
+	<type>string</type>
 	<default>#000000</default>
 	<locale name="C">
-		<short>the applet's background color.</short>
-		<long>the applet's background color.</long>
+		<short>Network background</short>
+		<long>Network background</long>
 	</locale>
 </schema>
 
