@@ -1,3 +1,8 @@
+2003-04-13  Kevin Vandersloot <kfv101@psu.edu>
+
+	* netload.c, propeties.c, linux-proc.c: add the ability to control the network background color.
+	Fixes bug #102088
+
 2003-04-08  Kevin Vandersloot <kfv101@psu.edu>
 
 	* linux-proc.c, properties.c, memload.c: Add seperate entry for cached memory. 
